2011-05-11	Sergey S. Sergeev

	* main/Net/Http/HeaderUtils.class.php: fetch HTTP request headers
	implemented.

	* main/Flow/MethodMappedController.class.php: default action override
	fixed.

2011-05-01	Sergey S. Sergeev

	* test/runme.sh: added ability to run the test cases with different 
	arguments, for example:
		- ./runme.sh (by default)
		- ./runme.sh --verbose --repeat 1 AllTests (launch test suite in
		verbose mode)
		- ./runme.sh --bootstrap config.inc.php core/CacheTest.class.php (
		launch 'CacheTest' only)

	* main/Utils/Routers/, core/PrimitiveHstoreTest.class.php,
	misc/DAOTest.class.php: assertType() has been deprecated.
	assertInternalType() should be used for asserting internal types such as
	"integer" or "string" whereas assertInstanceOf() should be used for
	asserting that an object is an instance of a specified class or interface.

	* main/Utils/AMQP/, test/main/Utils/AMQP/: AMQP supports added.

2011-04-20	Viatcheslav Y. Tsyrulnik

	* misc/Autoloader.inc.php: all autoloaders merged in one abstract class.

	* misc/BaseException.inc.php: for now it's duplication of BaseException,
	needed by wholeClassCache.

	* global.inc.php.tpl: spl_autoload_register instead of including file
	with __autoload().

	* misc/autoload.*: obsolete.

2011-02-15	Evgeny V. Kokovikhin

	* core/Cache/CyclicAggregateCache.class.php, test/core/CacheTest.class.php, 
	core/Cache/AggregateCache.class.php, core/Cache/BaseAggregateCache.class.php:
	new implementation of AggregateCache added.

2011-01-26	Evgeny V. Kokovikhin

	* main/Utils/FileUtils: makeUniqueLatinName method added
	* core/Base/Date, main/Base/CalendarDay: __sleep and __wakeup method added.

2011-01-24	Evgeny N. Sokolov

	* databases tests: skip, when fail connection, instead fatal

2011-01-19	Evgeny N. Sokolov

	* main/Math/MathUtils.class.php: add compareFloat function

2010-12-08	Evgeny V. Kokovikhin

	* main/Utils/IO/Socket.class.php: try to close socket immediately.