@@ -1,3 +1,7 @@
+2011-05-18	Evgeny V. Kokovikhin
+	* core/Cache/BaseAggregateCache.class.php: allways keep info about
+	current peer.
+
 2011-05-11	Sergey S. Sergeev
 
 	* main/Net/Http/HeaderUtils.class.php: fetch HTTP request headers
